# dp-wizard-templates

./: .clabot  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  README.md  README_test.py  example.md  index.html  pyproject.toml  requirements-dev.in
.github/workflows/: docs.yml  test.yml
README_examples/: hello-world.html  hello-world.ipynb
dp_wizard_templates/: __init__.py  code_template.py  converters.py  ui.js
examples/: expected-hello-world.html  hello-world.html  hello-world.ipynb  tutorial.md
scripts/: changelog.py  ci.sh  docs.sh  requirements.py
src/dp_wizard_templates/: __init__.py  converters.py
tests/: README.md  test_code_template.py  test_converters.py  test_example_md.py  test_index_html.py  test_misc.py  test_tutorial_md.py
tests/fixtures/: expected-fake-executed.html  expected-fake-executed.ipynb  expected-fake-executed.md  expected-fake.ipynb  fake-executed.ipynb  fake.ipynb  fake.py
testsX/: test_code_template.py
