[project]
name = "dp_wizard_templates"
authors = [{name = "The OpenDP Project", email = "contact@opendp.org"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "black",
    "ipykernel",
    "jupyter-client",
    "jupytext",
    "nbconvert",
]

[project.urls]
GitHub = "https://github.com/opendp/dp-wizard-templates"
Homepage = "https://opendp.github.io/dp-wizard-templates"

[tool.pyright]
ignore = ["examples/", "docs/"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "flit>=3.12.0",
    "isort>=8.0.1",
    "pdoc>=16.0.0",
    "pip-tools>=7.5.3",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "tomlkit>=0.15.0",
]
