[project]
name = "dp_wizard_templates"
authors = [{name = "The OpenDP Project", email = "contact@opendp.org"}]
readme = "README.md"
license = {file = "LICENSE"}
version = "0.9.0"
description = "TODO"
# TODO: Restore
# dynamic = ["version", "description"]
dependencies = [
    "black",
    "ipykernel",
    "jupyter-client",
    "jupytext",
    "nbconvert",
]

[project.urls]
GitHub = "https://github.com/opendp/dp-wizard-templates"
Homepage = "https://opendp.github.io/dp-wizard-templates"

[tool.pyright]
ignore = ["examples/", "docs/"]

[tool.isort]
profile = "black"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
dp-wizard-templates = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "dp-wizard-templates",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "isort>=8.0.1",
    "pdoc>=16.0.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
